# providers-self-service

./: .python-version  README.md  app.py  pyproject.toml
providers-json/: asnac.json  churchilljcr.json  cudgs.json  culc.json  cumfs.json  cumsa.json  jcsu.json  kcsu.json  lucyjcr.json  lucymcr.json  newnhamjcr.json  qjcr.json  qmcr.json  rcsa.json  tcsu.json  test_provider.json
templates/: index.html  main.html  update.html
tests/: test_app.py
